--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta http-equiv="refresh" content="5; url=https://www.new-page.com">
+        <meta http-equiv="refresh" content="5; url=dvd-logo.html">
     </head>
 </html>
